# focalmech-v1-c-kernel

./: .gitignore  CMakeLists.txt  README.md
include/: fm.h  io.h  kernel.h  types.h
julia/: FMI_IO.jl
src/: fm.c  fm_cuda.cu  fm_omp.c  io.c  io.cu  kernel.c  kernel.cu  test_nl2.cu  types.c  types.cu
test/: array_io.c  array_io.jl  check_cuda.jl  check_output.jl  clean.jl  copy_exe_here.jl  input_io.jl  show_input.jl  test_nl2.jl  write_input.jl
